--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "24.0.3"
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         applicationId "org.sqlite.app.customsqlite"
@@ -12,7 +12,7 @@ android {
 
     dependencies {
         compile project(':sqlite-android')
-        compile 'com.android.support:appcompat-v7:25.0.1' // includes support-v4
+        compile "com.android.support:appcompat-v7:${supportLibVersion}"
         compile fileTree(dir: 'libs', include: ['*.jar'])
     }
 
