--- a/sqlite-android/build.gradle
+++ b/sqlite-android/build.gradle
@@ -2,11 +2,12 @@ import org.apache.tools.ant.taskdefs.condition.Os
 
 buildscript {
     repositories {
+        google()
         mavenCentral()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0-beta2'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
@@ -21,12 +22,12 @@ def versionPatch = 0
 version = "${versionMajor}.${versionMinor}.${versionPatch}"
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 12
     }
 
@@ -87,20 +88,20 @@ task installLocal(type: Upload) {
     }
 }
 
-task deploy(type: Upload) {
-    description "Deploys the artifacts to the Nexus repository."
-    configuration = configurations['archives']
-    repositories {
-        mavenDeployer {
-            repository(url: "https://code.lds.org/nexus/content/repositories/mobile-releases/") {
-                authentication(userName: ldsmobileRepoUsername, password: ldsmobileRepoPassword)
-            }
-            pom.groupId = groupId
-            pom.artifactId = archivesBaseName
-            pom.version = version + "-" + new Date().format("yyyyMMdd")
-            pom.packaging = 'aar'
-            uniqueVersion = false // don't put in a timestamp on the filename (other project will not be able to depend on it)
-        }
-
-    }
-}
+//task deploy(type: Upload) {
+//    description "Deploys the artifacts to the Nexus repository."
+//    configuration = configurations['archives']
+//    repositories {
+//        mavenDeployer {
+//            repository(url: "https://code.lds.org/nexus/content/repositories/mobile-releases/") {
+//                authentication(userName: ldsmobileRepoUsername, password: ldsmobileRepoPassword)
+//            }
+//            pom.groupId = groupId
+//            pom.artifactId = archivesBaseName
+//            pom.version = version + "-" + new Date().format("yyyyMMdd")
+//            pom.packaging = 'aar'
+//            uniqueVersion = false // don't put in a timestamp on the filename (other project will not be able to depend on it)
+//        }
+//
+//    }
+//}
