--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0-beta2'
+        classpath 'com.android.tools.build:gradle:3.2.0-rc03'
     }
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
     }
 }
 
 ext {
-    supportLibVersion = '25.1.0'
+    supportLibVersion = '27.1.1'
 
     // Test
     junitVersion = '4.12'
-    mockitoVersion = '2.5.5'
+    mockitoVersion = '2.13.0'
 }
