--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 27
@@ -10,9 +12,11 @@ android {
     }
 
     dependencies {
-        compile project(':sqlite-android')
-        compile "com.android.support:appcompat-v7:${supportLibVersion}"
-        compile fileTree(dir: 'libs', include: ['*.jar'])
+        implementation project(':sqlite-android')
+        implementation "com.android.support:appcompat-v7:$supportLibVersion"
+
+        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+        implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
     }
 
     buildTypes {
