--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlinVersion = '1.2.70'
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0-rc03'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
 }
 
@@ -18,8 +21,9 @@ allprojects {
 
 ext {
     supportLibVersion = '27.1.1'
+    coroutinesVersion = '0.26.0'
 
     // Test
     junitVersion = '4.12'
-    mockitoVersion = '2.13.0'
+    mockitoVersion = '2.22.0'
 }
