--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlinVersion = '1.2.70'
+    ext.kotlinVersion = '1.2.71'
 
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0-rc03'
+        classpath 'com.android.tools.build:gradle:3.3.0-beta01'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
 }
@@ -21,7 +21,7 @@ allprojects {
 
 ext {
     supportLibVersion = '27.1.1'
-    coroutinesVersion = '0.26.0'
+    coroutinesVersion = '0.27.0'
 
     // Test
     junitVersion = '4.12'
