--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,6 @@ POM_DEVELOPER_NAME=LDS Android Dev
 
 # todo JetBrains has indicated that coroutines are stable, but the kotlinx-coroutines designs may change ... remove this when kotlinx-coroutines are no longer experimental
 kotlin.coroutines=enable
+
+android.useAndroidX=true
+android.enableJetifier=true
